--- a/styles/light.css
+++ b/styles/light.css
@@ -5,12 +5,49 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  
+  --accent-color: #ff8dcb;
+  --bg-color: #fff1f7;
+  --text-color: #353430;
+  --title-color: #ffc2e6;
+  --section-title-color: #353430;
+  --button-color: #353430;
+  --button-hover-color: rgba(50, 49, 45, 0.4);
+  --link-shadow: #ff8dcb;
+  --bg-image: url('../images/cover-image-light.png');
+  --article-title-bg: #ff8dcb;
+  --article-title-color: #353430;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-light .header__decoration {
+  display: none;
 }
+
+.theme-light .header__theme-menu-button_active {
+  border-color: var(--button-color);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #ff8dcb;
+    --bg-color: #fff1f7;
+    --text-color: #353430;
+    --title-color: #ffc2e6;
+    --section-title-color: #353430;
+    --button-color: #353430;
+    --button-hover-color: rgba(50, 49, 45, 0.4);
+    --link-shadow: #ff8dcb;
+    --bg-image: url('../images/cover-image-light.png');
+    --article-title-bg: #ff8dcb;
+    --article-title-color: #353430;
+  }
+
+  .header__decoration {
+    display: none;
+  }
+
+  .header__theme-menu-button_active {
+    border-color: var(--button-color);
+  }
+}
+
