--- a/styles/variables.css
+++ b/styles/variables.css
@@ -13,4 +13,6 @@
   --font-family: 'IBM Plex mono', monospace;
   --font-size: 18px;
   --line-height: 1.3;
+  --decor-color: #ff0070;
+  --menu-color: #ff0070;
 }
