--- a/styles/style.css
+++ b/styles/style.css
@@ -66,8 +66,8 @@
   inline-size: 9px;
   block-size: 9px;
   border-radius: 50%;
-  background-color: var(--accent-color);
-  box-shadow: 0 0 4px 2px var(--accent-color);
+  background-color: var(--decor-color);
+  box-shadow: 0 0 4px 2px var(--decor-color);
 }
 
 .header__title {
@@ -205,6 +205,7 @@
   .header__decoration {
     inset-block-start: 20px;
     inset-inline-end: 48px;
+    color: var(--decor-color);
   }
 
   .header__title {
