--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,15 +1,17 @@
+
 :root.theme-dark {
-  --accent-color: #ff0070;
-  --bg-color: #000028;
-  --text-color: #f1b2ce;
-  --title-color: #db00ff;
-  --section-title-color: #ff0070;
-  --button-color: #ff0070;
-  --button-hover-color: rgba(255, 0, 112, 0.4);
-  --link-shadow: #ff0070;
+  --accent-color: #FF0066;
+  --bg-color: #0F0E1A;
+  --text-color: #F8F8F8;
+  --title-color: #FF0066;
+  --section-title-color: #FF0066;
+  --button-color: #FF0066;
+  --button-hover-color: rgba(255, 0, 102, 0.4);
+  --link-shadow: #FF0066;
   --bg-image: url('../images/cover-image-dark.png');
-  --article-title-bg: #ff0070;
-  --article-title-color: #000028;
-  --decor-color: #ff0070;
-  --menu-color: #ff0070;
+  --article-title-bg: #FF0066;
+  --article-title-color: #000000;
+
+  --title-gradient: linear-gradient(90deg, #FF0066, #9D00FF, #00FFCF);
+  --title-shadow: 0 0 20px rgba(255, 0, 102, 0.8);
 }
