--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,3 @@
-/* Глобальные стили для проекта, их можно дополнять и менять по желанию */
-
 *,
 *::before,
 *::after {
@@ -17,13 +15,7 @@ body {
   color: var(--text-color);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
+h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
 
@@ -33,13 +25,7 @@ ul {
   list-style: none;
 }
 
-picture {
-  margin: 0;
-  padding: 0;
-}
-
-button,
-a {
+button, a {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
