--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,14 +1,13 @@
 :root.theme-dark {
-  --accent-color: #ff0066;
-  --bg-color: #0f0e1a;
-  --text-color: #f8f8f8;
-  --title-color: transparent;
-  --section-title-color: #ff0066;
-  --button-color: #ff0066;
-  --button-hover-color: rgba(255, 0, 102, 0.4);
-  --link-shadow: #ff0066;
-  --bg-image: url('../images/cover-image-dark.png');
-  --article-title-bg: #ff0066;
-  --article-title-color: #000000;
-  --title-gradient: linear-gradient(90deg, #ff0066, #9d00ff, #00ffcf);
+  --bg-color: #000;
+  --accent-color: #00cc14;
+  --bg-image: repeating-linear-gradient(
+      to left,
+      #000 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #007f0c, #004306);
+  --label-shadow: #000;
+  --contour-color: #00cc14;
 }
