--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,18 +1,22 @@
 :root {
-  --accent-color: #ff0066;
-  --bg-color: #0f0e1a;        
-  --text-color: #f8f8f8;
-  --title-color: transparent;
-  --section-title-color: #ff0066;
-  --button-color: #ff0066;
-  --button-hover-color: rgba(255, 0, 102, 0.4);
-  --link-shadow: #ff0066;
-  --bg-image: url('../images/cover-image-dark.png');
-  --article-title-bg: #ff0066;
-  --article-title-color: #000000;
-  --title-gradient: linear-gradient(90deg, #ff0066, #9d00ff, #00ffcf);
-
-  --font-family: 'Inter', sans-serif;
-  --font-size: 18px;
-  --line-height: 1.55;
+  /* Основные переменные для светлой темы (по умолчанию) */
+  --main-font-weight: 400;
+  --accent-font-weight: 700;
+  --font-family: "Inter-Variable", sans-serif;
+  --accent-font: "PressStart2P", fantasy;
+  
+  /* Цвета светлой темы */
+  --bg-color: #fff;
+  --accent-color: #000;
+  --bg-image: repeating-linear-gradient(
+      to left,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  --label-shadow: #fff;
+  --button-text-color: #fff;
+  --contour-color: #000;
+  --fill-color: #ff0000;
 }
