--- a/styles/light.css
+++ b/styles/light.css
@@ -2,30 +2,28 @@
 :root.theme-light {
   --bg-color: #fff;
   --accent-color: #000;
-  --bg-image: repeating-linear-gradient(
-      to left,
-      #d3d3d3 0 2px,
-      transparent 2px 4px
-    ),
-    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
-    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
   --label-shadow: #fff;
   --contour-color: #000;
+  --fill-color: #ff0000;
+  
+  --bg-image: 
+    repeating-linear-gradient(to left, #d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
 }
 
-/* Автотема для систем со светлой темой */
+/* Авторежим для систем со светлой темой */
 @media (prefers-color-scheme: light) {
-  :root {
+  :root:not(.theme-dark):not(.theme-light) {
     --bg-color: #fff;
     --accent-color: #000;
-    --bg-image: repeating-linear-gradient(
-        to left,
-        #d3d3d3 0 2px,
-        transparent 2px 4px
-      ),
-      repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
-      linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
     --label-shadow: #fff;
     --contour-color: #000;
+    --fill-color: #ff0000;
+    
+    --bg-image: 
+      repeating-linear-gradient(to left, #d3d3d3 0 2px, transparent 2px 4px),
+      repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+      linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
   }
 }
