--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,12 +1,16 @@
 @font-face {
-  font-family: 'Inter';
-  src: url('./Inter-Regular.woff2') format('woff2');
-  font-weight: 400;
+  font-family: "Inter-Variable";
+  src: 
+    local("Inter-Variable"),
+    url("../fonts/Inter-Variable.woff2") format("woff2 supports variations"),
+    url("../fonts/Inter-Variable.woff2") format("woff2-variations");
+  font-weight: 400 785;
   font-display: swap;
 }
+
 @font-face {
-  font-family: 'Inter';
-  src: url('./Inter-Bold.woff2') format('woff2');
-  font-weight: 700;
+  font-family: "PressStart2P";
+  src: url("../fonts/PressStart2P-Regular.woff") format("woff");
+  font-weight: 400;
   font-display: swap;
 }
