--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,13 +1,13 @@
+/* Темная тема через класс */
 :root.theme-dark {
   --bg-color: #000;
   --accent-color: #00cc14;
-  --bg-image: repeating-linear-gradient(
-      to left,
-      #000 0 2px,
-      transparent 2px 4px
-    ),
-    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
-    linear-gradient(to bottom, #007f0c, #004306);
   --label-shadow: #000;
   --contour-color: #00cc14;
+  --fill-color: #00cc14;
+  
+  --bg-image: 
+    repeating-linear-gradient(to left, #000 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #007f0c, #004306);
 }
