--- a/styles/light.css
+++ b/styles/light.css
@@ -2,28 +2,13 @@
 :root.theme-light {
   --bg-color: #fff;
   --accent-color: #000;
+  --button-text-color: #fff;
   --label-shadow: #fff;
   --contour-color: #000;
   --fill-color: #ff0000;
   
   --bg-image: 
-    repeating-linear-gradient(to left, #d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
     repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
     linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
-}
-
-/* Авторежим для систем со светлой темой */
-@media (prefers-color-scheme: light) {
-  :root:not(.theme-dark):not(.theme-light) {
-    --bg-color: #fff;
-    --accent-color: #000;
-    --label-shadow: #fff;
-    --contour-color: #000;
-    --fill-color: #ff0000;
-    
-    --bg-image: 
-      repeating-linear-gradient(to left, #d3d3d3 0 2px, transparent 2px 4px),
-      repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
-      linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
-  }
 }
