--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,11 +3,11 @@
   --font-family: "Inter-Variable", sans-serif;
   --accent-font: "PressStart2P", fantasy;
   
-  /* Насыщенность шрифтов */
+  /* Насыщенность */
   --main-font-weight: 400;
   --accent-font-weight: 700;
   
-  /* Цветовая схема по умолчанию (светлая) */
+  /* Цвета светлой темы (по умолчанию) */
   --bg-color: #fff;
   --accent-color: #000;
   --button-text-color: #fff;
@@ -15,9 +15,9 @@
   --contour-color: #000;
   --fill-color: #ff0000;
   
-  /* Фоновое изображение */
+  /* Фон светлой темы */
   --bg-image: 
-    repeating-linear-gradient(to left, #d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
     repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
     linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
 }
